# minds-python

./: README.md  pyproject.toml
.github/: lint.yml  tests.yml
minds/: client.py  exceptions.py  mind.py  models.py
tests/: test_client.py
