[tool.poetry]
name = "minds"
version = "0.0.1"
description = "The official Python library for Minds API"
authors = ["ZoranPandovski <zoran.pandovski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
requests = "^2.32.3"
pydantic = ">=2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
